PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/PatternReturnVariableExists.par
PatternReturnVariableExists {
var Int test = 0
reduction sum([Int] input) : Int res{
    res += input[INDEX]
}
seq main() : Void {
    test = 2
}
}